; ModuleID = '/home/carl/AnghaBench/git/extr_color.c_check_auto_color.c'
source_filename = "/home/carl/AnghaBench/git/extr_color.c_check_auto_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@check_auto_color.color_stderr_is_tty = internal global i32 -1, align 4
@color_stdout_is_tty = common dso_local global i32 0, align 4
@pager_use_color = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @check_auto_color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_auto_color(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp eq i32 %5, 1
  %7 = zext i1 %6 to i64
  %8 = select i1 %6, i32* @color_stdout_is_tty, i32* @check_auto_color.color_stderr_is_tty
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %9, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @isatty(i32 %13)
  %15 = load i32*, i32** %4, align 8
  store i32 %14, i32* %15, align 4
  br label %16

16:                                               ; preds = %12, %1
  %17 = load i32*, i32** %4, align 8
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %29, label %20

20:                                               ; preds = %16
  %21 = load i32, i32* %3, align 4
  %22 = icmp eq i32 %21, 1
  br i1 %22, label %23, label %34

23:                                               ; preds = %20
  %24 = call i64 (...) @pager_in_use()
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %34

26:                                               ; preds = %23
  %27 = load i64, i64* @pager_use_color, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %26, %16
  %30 = call i32 (...) @is_terminal_dumb()
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %33, label %32

32:                                               ; preds = %29
  store i32 1, i32* %2, align 4
  br label %35

33:                                               ; preds = %29
  br label %34

34:                                               ; preds = %33, %26, %23, %20
  store i32 0, i32* %2, align 4
  br label %35

35:                                               ; preds = %34, %32
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @isatty(i32) #1

declare dso_local i64 @pager_in_use(...) #1

declare dso_local i32 @is_terminal_dumb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
